修改:css 选择器内容修改

--- a/css/css_base.html
+++ b/css/css_base.html
@@ -120,25 +120,34 @@
 
 <a href="#">伪类选择器</a>
 
-<p>ul标签之前的相邻选择器</p>
+
+
+<h5>相邻选择器 X+Y</h5>
+
+<span>相邻选择器 X+Y</span> <br>
+<span>相邻选择器 X+Y</span><br>
+<span>相邻选择器 X+Y</span><br>
+
+
+<h5>节点组合选择器 X~Y</h5>
+
+<p>节点组合选择器 X~Y</p>
+<p>节点组合选择器 X~Y</p>
+<p>节点组合选择器 X~Y</p>
+
 
 <ul>
-  <li>A</li>
-  <li>B</li>
-  <li>C</li>
+  <li>E</li>
+  <li>F</li>
+  <li>G</li>
 </ul>
 
-<div id="container">
-  <ul>
-    <li> List Item
-      <ul>
-        <li> Child </li>
-      </ul>
-    </li>
-    <li> List Item </li>
-    <li> List Item </li>
-    <li> List Item </li>
-  </ul>
+
+<div class="box">
+    <div>
+      <p>X>Y选择器</p>
+          <div>X>Y选择器</div>
+    </div>
 </div>
 
 
@@ -150,6 +159,20 @@
 <!-- css 浮动 -->
 <!-- css 布局 -->
 <!-- css 锚点定位 -->
+
+<a href="#" target="_blank">jump to new world</a><br><br>
+<a href="https://www.baidu.com">去百度</a>
+<br><br>
+<a href="http://www.sina.com">去新浪</a>
+
+<hr>
+<div class="box_box">
+    <div>A</div>
+</div>
+
+<div box_3>
+  <a href="#">hover</a>
+</div>
 
 
 </body>
