完成 css选择器部分学习

--- a/css/css_base.html
+++ b/css/css_base.html
@@ -175,5 +175,86 @@
 </div>
 
 
+<ul class="ul">
+  <li>第一行</li>
+  <li>第二行</li>
+  <li>第三行</li>
+  <li>第四行</li>
+</ul>
+
+<ul>
+  <li>测试1</li>
+</ul>
+
+<ul>
+  <li>测试2</li>
+</ul>
+
+<ul class="ull">
+  <li>测试3</li>
+</ul>
+
+<ol class="oll">
+  <li id="li">5555</li>
+  <li>6666</li>
+  <li>7777</li>
+  <li>8888</li>
+  <li>9999</li>
+  <li>0000</li>
+</ol>
+
+<ol class="a">
+  <li>A</li>
+  <li>B</li>
+  <li>C</li>
+</ol>
+
+
+<div class="divbox">
+  <span>我是第一个span</span><br>
+  <span>我是第二个span</span><br>
+  <span>我是第三个span</span><br>
+  <span>我是第四个span</span><br>
+  <span>我是第五个span</span><br>
+  <span>我是第六个span</span><br>
+  <span>我是第七个span</span><br>
+</div>
+
+<div class="boxdiv">
+  <p><span>百度</span></p>
+  <p>小米</p>
+  <div>
+    <p>京东</p>
+  </div>
+
+  <div class="di">
+    <h1>淘宝</h1>
+    <p>
+      <span>百度</span>
+    </p>
+    <p>小米</p>
+    <div>
+      <p>京东</p>
+    </div>
+  
+</div>
+
+<p>
+  我是div后面的第一个相邻元素
+</p>
+
+<p>
+  我是div下面的第二个相邻元素
+</p>
+
+<a href="http://www.baidu.com" target="_blank" class="a_link">空链接</a>
+
+<a href="http://www.baidu.com" class="alink">百度链接</a>
+
+<p class="x">我身在一个机遇和危险共存的国度，在这里你每天都会遇到很多机会，同时也是面临危险<br>
+  但是选择了就只能勇敢前行，即使前方困难重重。但是选择了就只能勇敢前行，即使前方困难重重。<br>
+</p>
+
+
 </body>
 </html>
