修改:浮动内容修改

--- a/css/css_float.html
+++ b/css/css_float.html
@@ -19,5 +19,47 @@
 <div class="p_4">D</div>
 <span>我是一个span元素我是一个span元素我是一个span元素</span>
 
+
+<hr>
+<br>
+
+
+<!-- 一个设置了浮动属性的元素 会从原来的文档流中脱离出来，并且基于当前位置水平浮动到父容器的边沿或者浮动触碰到上一个浮动元素的边沿时停止，然后紧挨着上一个浮动元素的左或右边沿，呈水平排列。
+且它的相邻元素display属性如果是block，那么它会当浮动元素不存在而占据浮动元素原来所在的空间。 
+或它的相邻元素display属性如果是line,那么它会给浮动元素留出足够空间，并且出现文字环绕浮动元素的现象
+且浮动元素的父元素如果没有设置高度，浮动元素脱离文档流后，没有一个元素能撑起父元素的高度，从而导致了父元素
+高度坍陷，浮动溢出的情况。这时候页面的布局就整体打乱。因此需要清除浮动，从而后续的元素继续按照设计布局。
+-->
+<div class="float_parent">
+  <div class="float_box"></div>
+<p>从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+ 从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
+</p>
+</div>
+
+<br>
+<hr>
+<br>
+
+<div class="netease" id="netease">
+  <div>网易云-1</div>
+<div>
+ 网易云-2网易云-2网易云-2网易云-2
+</div>
+<!-- <div>
+<span>网易云-3</span>
+</div> -->
+</div>
+
+
+
 </body>
 </html>
