新增:解释为什么多个div排列有一个浮动时，div被覆盖，而文字却出现在浮动元素的下方

--- a/css/css_float.html
+++ b/css/css_float.html
@@ -30,6 +30,13 @@
 且浮动元素的父元素如果没有设置高度，浮动元素脱离文档流后，没有一个元素能撑起父元素的高度，从而导致了父元素
 高度坍陷，浮动溢出的情况。这时候页面的布局就整体打乱。因此需要清除浮动，从而后续的元素继续按照设计布局。
 -->
+
+
+<!-- 问：多个div排列，设置某一个div浮动属性时，为什么相邻元素的文字没有跟着上去而是出现在浮动元素的下方呢
+     答：文字其实也是环绕的，只不过没有宽度不够，无法在右边环绕，如果加大宽度就可以环绕了。其实文字环绕也是要占空间的，
+         如果包裹的元素宽度不够，就只能出现在浮动元素的底部了。
+-->
+
 <div class="float_parent">
   <div class="float_box"></div>
 <p>从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课从文艺复兴到现在 欧洲现代史 耶鲁大学备受欢迎的公开课
@@ -51,9 +58,7 @@
 
 <div class="netease" id="netease">
   <div>网易云-1</div>
-<div>
- 网易云-2网易云-2网易云-2网易云-2
-</div>
+<div>网易云-2网易云-2网易云-2网易云-2</div>
 <!-- <div>
 <span>网易云-3</span>
 </div> -->
