--- a/css/css_box_model.html
+++ b/css/css_box_model.html
@@ -31,6 +31,28 @@
 <div>下面</div>
 <!-- display:line-block 元素虽然是按照行内元素的方式水平排列，当时他又具有block的特性
 所以整体表现为maring和padding都会对上下和左右的元素产生作用 -->
+
+
+<!-- 盒子大小的计算
+  设置border-sizing属性来规范各个浏览器对盒子尺寸大小的统一 border-sizing的取值有两种
+  content-box: 宽度和高度分别应用到元素的内容框。 在宽度和高度之外绘制元素的内边距和边框
+  border-box:为元素设定的宽度和高度决定了元素的边框盒。 就是说，为元素指定的任何内边距和边框都将在已设定的宽度和高度内进行绘制。 
+               通过从已设定的宽度和高度分别减去边框和内边距才能得到内容的宽度和高度
+
+*一些专家甚至建议所有的Web开发者们将所有的元素的box-sizing都设为border-box。
+-->
+
 <div class="box">AAA</div> <br> <div class="box">BBB</div> <br> <div class="box">CCC</div>
+
+<br>
+<br>
+
+
+
+<div class="model_box">
+  <div class="one_1">CICICIC</div>
+  <div class="one_2">DIDIDI</div>
+</div>
+
 </body>
 </html>
