相关知识点修改、

--- a/css/css_box_model.html
+++ b/css/css_box_model.html
@@ -8,7 +8,12 @@
   <link rel="stylesheet" href="./css_box_model.css">
 </head>
 <body>
-    <!-- 盒子模型 -->
+    <!-- 盒子模型 知识点总结
+        1、盒子模型概念
+        2、盒子模型的四个要素
+        3、盒子模型计算
+        4、display属性的应用
+    -->
     <!-- width height 是设置给谁的 auto 100% 固定值各自的意义 -->
     <!-- 
       行内元素规则：
@@ -17,7 +22,7 @@
       3、设置margin 只有左右margin有效，上下无效
       4、设置padding 只有左右padding有效，上下则无效。注意元素范围是增大了，
           但是对元素周围的内容是没影响的。
-     -->
+    -->
 
     <!-- 行内元素设置宽、高属性无效 padding属性只对左右有下 上下虽然会扩大盒子高度，
     但对下一个和上一个元素的布局没有产生影响 margin属性和padding的表现效果一致-->
