--- a/css/css_float.html
+++ b/css/css_float.html
@@ -8,7 +8,13 @@
   <link rel="stylesheet" href="./css_float.css">
 </head>
 <body>
-  <!-- 浮动 -->
+  <!-- 浮动 知识总结
+  
+    1、浮动的产生背景
+    2、浮动的表示
+    3、浮动的作用
+    4、浮动的清除
+  -->
 
 <div class="box">
   <p class="p_1">A</p>
