--- a/css/css_position.html
+++ b/css/css_position.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 
-  <!-- 定位 -->
+  <!-- 定位 知识总结
+    1、常见的定位方式以及各自的特点
+    2、定位的应用
+  -->
   <!-- 
     常见的定位 包括 普通流 定位 浮动
     普通流:就是按照标准的CSS布局方式 块级元素单独一行显示，行内元素在一行内显示 如果一行显示满了就换一样显示。
