修改:增加浮动的清除方法知识

--- a/css/css_float.html
+++ b/css/css_float.html
@@ -70,6 +70,23 @@
 </div> -->
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<hr>
+
+<div class="style_box">
+  <img src="./timg.jpg" alt="picture can't load" width="300px" height="300px">
+<span>北欧风格（Nordic style）是指欧洲北部国家挪威、丹麦、瑞典、芬兰及冰岛等国的艺术设计风格（主要指室内设计以及工业产品设计），具有简洁、自然、人性化的特点
+北欧风格在使大众利益得到关注的同时，北欧设计没有缺失对小众的关怀。例如消除残障人士在生活上的不便，为其设计便捷的人性设计，实现社会公平。它们都体现了北欧风格设计对人的周全关心
+</span>
+<span class="cleanfix"></span>
+</div>
+<p class="style">
+ 装修风格，也称设计风格，是房屋装修的整体特点。每个人的喜好不尽相同，装修风格的确立让设计师更容易把握设计的立足点，让业主朋友更容易表达出对所需的装修效果的一种需求。 装修从风格上分类，可分为：现代简约风格、田园风格、后现代风格、中式风格、新中式风格、地中海风格、东南亚风格、美式风格、新古典风格、日式风格等。
+</p>
+
 
 
 </body>
