修改:选择器部分知识修改以及demo练习

--- a/css/css_base.html
+++ b/css/css_base.html
@@ -256,5 +256,31 @@
 </p>
 
 
+<br>
+<hr>
+<div class="h1p">
+  <h1>h1~p</h1>
+  <p>p1</p>
+  <div>div</div>
+  <div>div</div>
+  <p>p2</p>
+  <p>p3</p>
+  <h2>h2</h2>
+  <p>p4</p>
+  <p>p5</p>
+</div>
+
+<br>
+
+<div class="divp">
+    <p>JavaScript</p>
+    <h2>HTML</p>
+      <span>CSS</span>
+      <span>Java</span>
+      <p>Android</p>
+    <a href="#">IOS</a>
+</div>
+
+
 </body>
 </html>
