修改 字体、背景、列表知识

--- a/css/css_font_bg_list.html
+++ b/css/css_font_bg_list.html
@@ -8,10 +8,29 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <link rel="stylesheet" href="./css_font_bg_list.css">
+
 </head>
 <body>
   
+  <!-- 背景设置 
+    color:设置颜色
+    img:设置背景图片 如果图片和颜色都设置了 优先显示图片
+    repeat：图片是否重复显示 no-repeat | repeat-X |repeat-Y | repeat 分别是不重复
+    在水平方向上重复 在垂直方向上重复 水平和垂直方向都重复
+    attachment:背景是否滚动 scroll|fixed 
+    position:背景在X和Y方向上的偏移量 可以取具体指或者百分比 50% 50%居中 center center居中
+  -->
+<div class="box_1"></div>
 
+<div class="box_2">
+  <ul>
+    <li>HTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTMLHTML
+       HTMLHTMLHTMLHTMLHTMLHTHTMLHTMLHTMLHTMLHTMLHTHTMLHTMLHTMLHTMLHTMLHTHTMLHTMLHTMLHTMLHTMLHT
+    </li>
+    <li>CSS</li>
+    <li>JAVASCRIPT</li>
+  </ul>
+</div>
   
 </body>
 </html>
