--- a/css/train/lesson2/lesson2.html
+++ b/css/train/lesson2/lesson2.html
@@ -10,26 +10,66 @@
 </head>
 <body>
   <div class="header">
+
     <div class="logo">
-      <img src="./bd_logo1.png" alt="" width="50px" height="50px">
+      <a href="https://www.baidu.com">
+        <img src="./bd_logo1.png" alt="" width="62px" height="32px">
+      </a>
     </div>
-    <div class="banner">
-      <ul>
-        <li>导航链接一</li>
-        <li>导航链接二</li>
-        <li>导航链接三</li>
-        <li>导航链接四</li>
-      </ul>
+
+    <div class="nav">
+        <div>
+          <span></span>
+          <a href="#">导航链接一</a>
+        </div>
+
+        <div>
+          <span></span>
+          <a href="#">导航链接二</a>
+        </div>
+
+        <div>
+          <span></span>
+          <a href="#">导航链接三</a>
+        </div>
+
+        <div>
+          <span></span>
+          <a href="#" class="four">导航链接四</a>
+        </div>
+
     </div>
+
   </div>
+
 
   <div class="content">
-
+      <section>
+        <h3>文章一级标题</h3>
+        <h4>文章二级标题</h4>
+        <p>文章作者 文章发表时间</p>
+        <p>
+ 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个
+ 长很长的段落, 换行了<br>
+ 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br>
+ 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落 <strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落
+这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
+        </p>
+        <img src="./fifa2018.png" alt=""><br>
+        <span>
+ 国际足联世界杯（FIFA World Cup）简称“世界杯”，是世界上最高荣誉、最高规格、最高竞技水平、最高知名度的足球比赛，与奥运会并称为 <br> 全球体育两大最顶级赛事，影响力和转播覆盖率超过奥运会的全球最大体育盛事。<br>
+ 世界杯是全球各个国家在足球领域最梦寐以求的神圣荣耀，也是各个国家（或地区）所有足球运动员的终极梦想。世界杯每四年举办一次，<br> 任何<a href="https://www.fifa.com/worldcup/">国际足联</a>会员国（地区）都可以派出代表队报名参加这项赛事。世界杯是世界足球运动发展推广普及的源头和根本，所以也被誉为“生命之杯”。<br>
+ 巴西是夺得该项荣誉最多的球队，共获得5次世界杯冠军，并且在3夺世界杯后永久地保留了前任世界杯雷米特杯。<br> 现在的世界杯是大力神杯，4夺世界杯冠军的德国在1974年首次捧杯并沿用至今，两者都统称为世界杯。中国曾在2002年首次晋级第17届韩日世界杯决赛阶段32强。<br>
+        </span>
+      </section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
   </div>
 
-  <div class="footer">
-
-  </div>
+  <div class="footer"></div>
 
 </body>
 </html>
