修改:第二课代码

--- a/css/train/lesson2/lesson2.html
+++ b/css/train/lesson2/lesson2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
 
   <link rel="stylesheet" href="./lesson2.css">
 </head>
+
 <body>
   <div class="header">
 
@@ -18,25 +20,25 @@
     </div>
 
     <div class="nav">
-        <div>
-          <span></span>
-          <a href="#">导航链接一</a>
-        </div>
+      <div>
+        <span></span>
+        <a href="#">导航链接一</a>
+      </div>
 
-        <div>
-          <span></span>
-          <a href="#">导航链接二</a>
-        </div>
+      <div>
+        <span></span>
+        <a href="#">导航链接二</a>
+      </div>
 
-        <div>
-          <span></span>
-          <a href="#">导航链接三</a>
-        </div>
+      <div>
+        <span></span>
+        <a href="#">导航链接三</a>
+      </div>
 
-        <div>
-          <span></span>
-          <a href="#" class="four">导航链接四</a>
-        </div>
+      <div>
+        <span></span>
+        <a href="#" class="four">导航链接四</a>
+      </div>
 
     </div>
 
@@ -44,32 +46,245 @@
 
 
   <div class="content">
-      <section>
-        <h3>文章一级标题</h3>
-        <h4>文章二级标题</h4>
-        <p>文章作者 文章发表时间</p>
-        <p>
- 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个
- 长很长的段落, 换行了<br>
- 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了<br>
- 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
-<a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落 <strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落
-这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
-        </p>
-        <img src="./fifa2018.png" alt=""><br>
+    <section>
+      <h3>文章一级标题</h3>
+      <h4>文章二级标题</h4>
+      <p>文章作者 文章发表时间</p>
+      <p>
+        这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个 长很长的段落, 换行了
+        <br> 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，换行了
+        <br> 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，
+        <a href="http://ife.baidu.com">这里有一个链接链接到http://ife.baidu.com</a>这是一个很长很长的段落，这是一个很长很长的段落
+        <strong>这里有个粗体字</strong>这是一个很长很长的段落，这是一个很长很长的段落 这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落，这是一个很长很长的段落。
+      </p>
+      <img src="./fifa2018.png" alt="">
+      <br>
+      <span>
+        国际足联世界杯（FIFA World Cup）简称“世界杯”，是世界上最高荣誉、最高规格、最高竞技水平、最高知名度的足球比赛，与奥运会并称为
+        <br> 全球体育两大最顶级赛事，影响力和转播覆盖率超过奥运会的全球最大体育盛事。
+        <br> 世界杯是全球各个国家在足球领域最梦寐以求的神圣荣耀，也是各个国家（或地区）所有足球运动员的终极梦想。世界杯每四年举办一次，
+        <br> 任何
+        <a href="https://www.fifa.com/worldcup/">国际足联</a>会员国（地区）都可以派出代表队报名参加这项赛事。世界杯是世界足球运动发展推广普及的源头和根本，所以也被誉为“生命之杯”。
+        <br> 巴西是夺得该项荣誉最多的球队，共获得5次世界杯冠军，并且在3夺世界杯后永久地保留了前任世界杯雷米特杯。
+        <br> 现在的世界杯是大力神杯，4夺世界杯冠军的德国在1974年首次捧杯并沿用至今，两者都统称为世界杯。中国曾在2002年首次晋级第17届韩日世界杯决赛阶段32强。
+        <br>
+      </span>
+    </section>
+    <section>
+      <h3>马斯克和特斯拉能否颠覆汽车生产线？</h3>
+      <h4>纽约时报记者对特斯拉工厂进行实地探访</h4>
+      <p>作者Neal E. Boudette 2小时前</p>
+      <p>
+        为了生产第一款面向大众市场的电动汽车，这家汽车制造商建立了多条装配线，并正生产过程中调整其生产流程。
+        <br> 加州弗里蒙特市——特斯拉庞大的电动汽车工厂的北侧，一个不寻常的“建筑”在过去几周中逐步成形：这是一个帐篷，大约50英尺高，几百英尺长，紧绷的灰色帆布膜由铝柱支撑。
+        <br> 搭建这一帐篷的目的同它本身的快速建造一样显而易见。这一特斯拉的半永久性建筑中容纳了其第三条装配线——目的为了加速Model 3的生产而进行的孤注一掷的努力的一部分。 特斯拉首席执行官
+        <a href="http://www.tesla.cn">埃隆•马斯克</a> 埃隆•马斯克(Elon Musk)此前表示，Model 3对公司的财务健康和前景至关重要
+        <br> 就在两年前，马斯克还将2018年视为一个突破性的时刻。特斯拉已经通过高端产品——Model S豪华轿车和Model X运动型多用途车——确立了该品牌的声望，并将开始大量生产更实惠的Model 3轿车。 如果采用快速、高科技的装配工艺，该公司的销量将猛增五倍以上，达到每年50万辆。
+        <br>
+        <img src="./teslase.jpg!1200" alt="">
+        <br>
         <span>
- 国际足联世界杯（FIFA World Cup）简称“世界杯”，是世界上最高荣誉、最高规格、最高竞技水平、最高知名度的足球比赛，与奥运会并称为 <br> 全球体育两大最顶级赛事，影响力和转播覆盖率超过奥运会的全球最大体育盛事。<br>
- 世界杯是全球各个国家在足球领域最梦寐以求的神圣荣耀，也是各个国家（或地区）所有足球运动员的终极梦想。世界杯每四年举办一次，<br> 任何<a href="https://www.fifa.com/worldcup/">国际足联</a>会员国（地区）都可以派出代表队报名参加这项赛事。世界杯是世界足球运动发展推广普及的源头和根本，所以也被誉为“生命之杯”。<br>
- 巴西是夺得该项荣誉最多的球队，共获得5次世界杯冠军，并且在3夺世界杯后永久地保留了前任世界杯雷米特杯。<br> 现在的世界杯是大力神杯，4夺世界杯冠军的德国在1974年首次捧杯并沿用至今，两者都统称为世界杯。中国曾在2002年首次晋级第17届韩日世界杯决赛阶段32强。<br>
+          从那时起，特斯拉就开始争分夺秒地寻找并解决装配过程中遇到的各种问题。主要是抛弃一些被证明不适合某些任务的复杂的机器人，并雇佣了数百名工人来代替它们。 在工厂里，为了实现马斯克先生宏大目标，员工们正在倾尽全力同时间赛跑。 但如果这场赌博成功，那将是特斯拉迈向其野心的重要一步：不仅要成为一家面向大众市场的汽车制造商，而且要彻底颠覆汽车的生产方式。
+          <br/>“我们相信快速进化，”马斯克在接受采访时说。“这就像是，找到一条路或者开辟一条路。如果传统思维使你的任务看上去不可能完成，那么就必须用突破的传统思维来思考问题。“
+          <br> 的确，马斯克正在尝试做一些前人从未做过的事情。通用汽车、日产、宝马、福特等公司都曾生产过电动汽车，但它们一直无法将成本压缩到客户既能负担得起，同时公司又能盈利的水平。相比之下，马斯克已经向投资者和客户承诺，特斯拉将能够大批量生产Model3，售价最低仅为3.5万美元，并获得巨额利润。
+          <br> 马斯克认为一旦
+          <strong> Model 3</strong>的生产步入正轨，特斯拉就可以着眼于生产更多类型的电动汽车，包括皮卡、半拖车卡车、面向家庭用户的车型Model Y。马斯克在众多公开场合都提及公司的使命：引领零排放出行的革命并以此改变世界。
         </span>
-      </section>
-      <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      </p>
+    </section>
+    <section class="section_3">
+      <span class="section3_title">图片</span>
+      <div class="section3_box">
+        <span>Microsoft+GitHub</span>
+        <div>
+          <img src="./microsoftgithubofficial.0.0.jpg" alt="" width="740" height="493px">
+        </div>
+      </div>
+
+      <div class="section3_box">
+        <span>Microsoft+GitHub</span>
+        <div>
+          <img src="./microsoftgithubofficial.0.0.jpg" alt="" width="740" height="493px">
+        </div>
+      </div>
+
+      <div class="section3_box">
+        <span>Microsoft+GitHub</span>
+        <div>
+          <img src="./microsoftgithubofficial.0.0.jpg" alt="" width="740" height="493px">
+        </div>
+      </div>
+
+      <div class="section3_box">
+        <span>Microsoft+GitHub</span>
+        <div>
+          <img src="./microsoftgithubofficial.0.0.jpg" alt="" width="740" height="493px">
+        </div>
+      </div>
+
+      <div class="section3_box">
+        <span>Microsoft+GitHub</span>
+        <div>
+          <img src="./microsoftgithubofficial.0.0.jpg" alt="" width="740" height="493px">
+        </div>
+      </div>
+
+    </section>
+    <section>
+      <h2>Isn’t it time we declared our independence from bloatware?</h2>
+      <h5>bloatware</h5>
+      <p>By Vlad Savov@vladsavov Jul 4, 2018, 9:00am EDT</p>
+      <div>
+        <img src="./bloat11.0.jpg" alt="">
+        <br>
+        <span>
+          So you’ve just bought the best Windows laptop, you’ve gritted your teeth through Cortana’s obnoxiously cheery setup narration,
+          and the above screenshot is the Start menu you’re presented with. Exactly how special do you feel as you watch
+          the tiles animating and blinking at you like a slots machine? I’ll tell you how I felt as I was getting to grips
+          with the Huawei MateBook X Pro for the first time: perplexed. Perplexed that this level of bloatware infestation
+          is still a thing in 2018, especially on a computer costing $1,499 and running an OS called Windows 10 “Pro.” Why
+          are we still tolerating this?
+          <br> Before anyone assumes that this is just a rant against and about Windows, I’ll happily include Apple’s iOS and
+          some varieties of Google’s Android in my scorn. The blight of undesired software and prompts is all around us.
+          If I buy an iPhone, Apple pins the Apple Watch app on my home screen, whether I have the compatible watch or not.
+          Or if I go to Apple’s nemesis, Samsung forces its Bixby assistant into everything I do with a Galaxy S
+          <br> Cloud storage is a common cause for unnecessary nags. I had to decline Microsoft’s offers to activate auto-backup
+          to OneDrive three times before Windows 10 got the message. If I use the majority of Apple’s free 5GB of iCloud
+          storage, I’ll get a daily reminder that I can pay to get more. And Google’s Photos app is so thirsty for any images
+          I generate with my phone that it will ask me if I want to automatically back up new folders I create (such as ones
+          for screenshots or downloaded photos). I understand that for some people and in some instances those prompts will
+          be helpful, but those are exceptions to the rule. And the rule seems to be that companies are trying to beat us
+          into submission through mental attrition.
+        </span>
+      </div>
+      <ol>
+        <li>排名1</li>
+        <li>排名2</li>
+        <li>排名3</li>
+      </ol>
+      <table class="table">
+        <tr class="tr_1" align="left">
+          <th>Operating System</th>
+          <th>1Q17 Units</th>
+          <th>1Q17Market Share(%)</th>
+          <th>1Q16Units</th>
+          <th>1Q16Market Share(%)</th>
+        </tr>
+
+        <tr>
+          <td>Android</td>
+          <td>327,163.6</td>
+          <td>86.1</td>
+          <td>292,746.9</td>
+          <td>84.1</td>
+        </tr>
+
+
+        <tr>
+          <td>IOS</td>
+          <td>51,992.5</td>
+          <td>13.7</td>
+          <td>51,629.5</td>
+          <td>14.8</td>
+        </tr>
+
+
+        <tr>
+          <td>Other OS</td>
+          <td>821.2</td>
+          <td>0.2</td>
+          <td>3,847.8</td>
+          <td>1.1</td>
+        </tr>
+
+        <tr>
+          <td>Total</td>
+          <td>379,977.3</td>
+          <td>100.0</td>
+          <td>248,224.2</td>
+          <td>100.0</td>
+        </tr>
+
+        <!-- 单元格居中 属性 align="center"-->
+        <tr align="center" class="tr_2">
+          <!-- 单元格合并 列合并属性:colspan  行合并属性: rowspan-->
+          <td colspan="5">721408.5</td>
+        </tr>
+
+      </table>
+    </section>
+    <section class="section5">
+      <div class="section5_box_1">
+        <div class="div_1"></div>
+        <div class="div_2">
+          <span>关于自己</span>
+        </div>
+      </div>
+
+      <form action="">
+        <div>
+          <label for="">请输入邮箱地址</label>
+          <input type="text" placeholder="请输入邮箱地址">
+          <br>
+          <span>邮箱地址请按要求格式输入</span>
+        </div>
+
+        <div>
+          <label for="">请输入密码</label>
+          <input type="password">
+        </div>
+
+
+        <div>
+          <label for="">请重复输入密码</label>
+          <input type="password">
+          <br>
+          <span>密码请为6-16位英文数字</span>
+        </div>
+
+        <div>
+          <label for="">性别</label>
+          <input type="radio" name="sex" value="man">
+          <label for="">男</label>
+          <input type="radio" name="sex" value="women">
+          <label for="">女</label>
+        </div>
+
+        <div>
+          <label for="">城市</label>
+          <select name="city" id="city">
+            <option value="bj">北京</option>
+            <option value="sh">上海</option>
+            <option value="gz">广州</option>
+          </select>
+        </div>
+
+        <div>
+          <label for="">爱好</label>
+          <input type="checkbox">
+          <label for="">运动</label>
+          <input type="checkbox">
+          <label for="">艺术</label>
+          <input type="checkbox">
+          <label for="">科学</label>
+        </div>
+
+        <div>
+          <label for="">个人描述</label>
+          <textarea name="desc" id="desc" cols="30" rows="10" placeholder="输入你的介绍"></textarea>
+        </div>
+
+        <div>
+          <input type="submit" name="确认提交" width="100%">
+        </div>
+      </form>
+    </section>
   </div>
 
-  <div class="footer"></div>
+  <div class="footer">
+    <span style="color: white">版权所有</span>
+  </div>
 
 </body>
+
 </html>
