修改:布局修改

--- a/css/train/lesson2/lesson2.html
+++ b/css/train/lesson2/lesson2.html
@@ -215,34 +215,34 @@
     </section>
     <section class="section5">
       <div class="section5_box_1">
-        <div class="div_1"></div>
-        <div class="div_2">
-          <span>关于自己</span>
-        </div>
+      
+          <div class="div_1"></div>
+          <span class="span_1">关于我们</span>
+
       </div>
 
-      <form action="">
-        <div>
+      <form action="" class="form">
+        <div class="email">
           <label for="">请输入邮箱地址</label>
           <input type="text" placeholder="请输入邮箱地址">
           <br>
           <span>邮箱地址请按要求格式输入</span>
         </div>
 
-        <div>
+        <div class="password">
           <label for="">请输入密码</label>
           <input type="password">
         </div>
 
 
-        <div>
+        <div class="password_again">
           <label for="">请重复输入密码</label>
           <input type="password">
           <br>
           <span>密码请为6-16位英文数字</span>
         </div>
 
-        <div>
+        <div class="radio">
           <label for="">性别</label>
           <input type="radio" name="sex" value="man">
           <label for="">男</label>
@@ -250,7 +250,7 @@
           <label for="">女</label>
         </div>
 
-        <div>
+        <div class="selected">
           <label for="">城市</label>
           <select name="city" id="city">
             <option value="bj">北京</option>
@@ -259,7 +259,7 @@
           </select>
         </div>
 
-        <div>
+        <div class="checkbox">
           <label for="">爱好</label>
           <input type="checkbox">
           <label for="">运动</label>
@@ -269,12 +269,12 @@
           <label for="">科学</label>
         </div>
 
-        <div>
+        <div class="spec">
           <label for="">个人描述</label>
           <textarea name="desc" id="desc" cols="30" rows="10" placeholder="输入你的介绍"></textarea>
         </div>
 
-        <div>
+        <div class="btn">
           <input type="submit" name="确认提交" width="100%">
         </div>
       </form>
