第三课练习

--- a/css/css_position.html
+++ b/css/css_position.html
@@ -25,7 +25,7 @@
     一旦设置了left or right or top or bottom这些偏移量，那么他会基于当前的位置进行位置偏移，偏移后并不会影响其相邻元素的定位(其他元素在哪还是在哪)
     他移出来的空间也不会被相邻的元素所填补。但偏移后可能会覆盖到其他元素上，遮住部分或全部相邻元素。
     absolute： 这是一种很强大的定位。一旦元素设置成了absolute属性，表示进行绝对定位。那么定位的元素会从当前位置的文档流中脱离出来
-     相对于已定位属性的父类进行定位(这里的已定位的是说它的祖先定位属性是relative或普通定位)，他原来所占据的空间会被相邻的元素占据。在没有设置偏移的情况下他会浮在原地上方，有X,Y,Z轴空间的既视感。
+     相对于已定位属性的父类进行定位(这里的已定位的是说它的祖先定位属性是relative fixed absolute或普通定位)，他原来所占据的空间会被相邻的元素占据。在没有设置偏移的情况下他会浮在原地上方，有X,Y,Z轴空间的既视感。
      fixed: 这也是一种脱离文档流的定位不过，和绝对定位很相似，不过它是相对于视口进行定位的。
      stick: 这是一种relative+fixed方式的定位，一般用于首部固定一个东西，一旦脱离首部区域他会悬浮于内容上面。窗口滚到到离顶部一定距离就固定在首部。
    -->
