完成第五课作业

--- a/css/train/lesson5/lesson5.html
+++ b/css/train/lesson5/lesson5.html
@@ -37,7 +37,9 @@
             <h4>Facebook宣布正式放弃 "无人机4G基站"项目</h4>
             <h5>无人机/Facebook</h5>
             <p>2018-07-14 14:32 OTT攻略</p>
-            <img src="./facebook.jpeg" alt="" width="550px" height="367px"><br><br>
+            <img src="./facebook.jpeg" alt="" width="550px" height="367px">
+            <br>
+            <br>
             <p>
               此前，Facebook计划用这种"无人机4G基站"处理紧急情况下的临时承担通信服务。最初于2017年5月，该项目在F8研发者大会上和大家第一次见面，但是仅仅过去了一年，这个项目就被叫停，也从侧面证明其可执行性。 无独有偶，Google在2014年也收购了一家名为"Titan
               Aerospace"的初创公司,该公司的核心项目是利用高空无人机向地球上偏僻地区提供上网接入服务,其利用太阳能作为动力,在高空保持长期飞行。这样一来,除了能够帮助世界更多地区普及互联网。另一个作用也和Facebook一样为了应对突发事件,比如在自然灾害或灾难发生时,这种高空网络无人机可以起到恢复通信的作用。
@@ -48,31 +50,99 @@
               <li>Facebook</li>
               <li>Google</li>
               <li>Baidu</li>
-            </ol>
+              </ol>
           </article>
           <article>
-            <div>图片</div>
-            <div>
-              <ul>
-                <li></li>
-                <li></li>
-              </ul>
+            <div class="title">图片</div>
+
+            <div class="pic_colum_1">
+              <div class="pic_content">
+                <span>好看的图片</span>
+                <div>
+                  <img src="./postman.png" alt="">
+                </div>
+              </div>
+
+              <div class="pic_content">
+                <span>好看的图片</span>
+                <div>
+                  <img src="./postman.png" alt="">
+                </div>
+              </div>
+
             </div>
+
+            <div class="pic_colum_1">
+              <div class="pic_content">
+                <span>好看的图片</span>
+                <div>
+                  <img src="./postman.png" alt="">
+                </div>
+              </div>
+
+              <div class="pic_content">
+                <span>好看的图片</span>
+                <div>
+                  <img src="./postman.png" alt="">
+                </div>
+              </div>
+            </div>
+
           </article>
           <article>
-            <h4></h4>
-            <h5></h5>
-            <p></p>
+            <h4>继中国之后马斯克的下一个目标是打开印度市场！</h4>
+            <h5>继中国之后马斯克的下一个目标是打开印度市场！,马斯克 印度 中国 特斯拉 推特 电动汽车</h5>
+            <p>时间 2018-07-15 14:00:02 互联网</p>
+            <div>
+              <p>
+                网易科技讯7月15日消息，特斯拉CEO伊隆-马斯克在结束了为期3天的中国之旅后，表示有兴趣在2019年年初拜访印度。他之前曾声称，印度政府的严格监管通常让他感到绝望。
+              </p>
+              <img src="./musk.jpg" alt="" class="image_center">
+              <br>
+              <p>
+                亿万富翁马斯克同时也是SpaceX公司的创建者。有一位推特用户询问他计划什么时间前往印度，他在推特上对回复称，他渴望能够很快拜访印度，或许是明年年初。马斯克想要在印度推广特斯拉的电动汽车，但是政府监管迫使他将计划推迟到了现在。早在2017年夏季他就想要将特斯拉电动汽车推向印度市场，但是印度当局严格的管理规定让他的计划搁浅。
+                马斯克在推特上称：“我很愿意前往印度。但不幸的是，我的一些计划与政府的法规相冲突。我们的CFO Deepak Ahuja就来自印度。只要他认为我们应当开拓印度市场，那么我们就会在那。”Ahuja是一位经验丰富的汽车行业财务主管，他拥有在福特汽车长达15年的工作经验，而且在2010年加入特斯拉担任公司的首席财务总监（CFO）。
+                马斯克在2017年称，特斯拉电动汽车能够在夏季进入印度市场，但最终却没有更多的消息传出。马斯克后来指责称，印度的外国直接投资（FDI）法规导致特斯拉推迟了进入印度市场的计划。 马斯克在推特上称：“或许我被提供了错误的信息，但是我被告知30%的部件必须来自于当地，而且印度还不存在那样的供货渠道。”“Make
+                in India”在推特上对马斯克做出回应称：“关于特斯拉的计划在印度搁浅的新闻报道，请留意一些关键的说明。”特斯拉预计将通过售价近3.5万美元的Model 3打开印度市场。 伊隆-马斯克的中国梦想正不断发芽，他在7月12日声称与中国的高级官员举行了密切磋商会议，并且计划在中国进行长期投资。他与上海政府签订了一份初步协议，将在中国境内建造一座特斯拉超级工厂。
+                这座超级工厂预计每年可声称50万辆电动汽车，将特斯拉的产能提高两倍。马斯克在早些时候曾声称，在中国的基础设施建设进程比美国快100倍。（过客）
+              </p>
+            </div>
             <ol>
-              <li></li>
-              <li></li>
-              <li></li>
+              <li>排名一</li>
+              <li>排名二</li>
+              <li>排名三</li>
             </ol>
-            <p></p>
-            <table>
-              <td></td>
-              <td></td>
-              <td></td>
+            <p>下面是一个表格</p>
+            <table border="1">
+              <tr>
+                <th>表头</th>
+                <th>表头</th>
+                <th>表头</th>
+              </tr>
+              <tr>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+              </tr>
+              <tr>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+              </tr>
+              <tr>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+              </tr>
+              <tr>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+                <td>表内单元格</td>
+              </tr>
+              <tr>
+                <td class="last_colun">1000</td>
+              </tr>
+
             </table>
           </article>
         </div>
@@ -80,17 +150,57 @@
 
 
       <div class="right">
-        <h4></h4>
-        <form action="">
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
-          <div></div>
+
+        <h6 id="about"></h6>
+        <span>关于自己</span>
+        <form action="" id="form">
+          <div>
+            <label for="email" class="lable_left" id="a">请输入邮箱地址</label>
+            <input type="email" placeholder="请输入邮箱地址" class="input_right">
+            <div class="placeholder">邮箱地址请按要求格式输入</div>
+          </div>
+          <div>
+            <label for="password" class="lable_left">请输入密码</label>
+            <input type="password" class="input_right">
+          </div>
+          <div>
+            <label class="lable_left" for="password">请再次输入密码</label>
+            <input type="password" class="input_right">
+            <div class="placeholder">密码为16为英文数字</div>
+          </div>
+          <div>
+            <label for="geneman" class="lable_left">性别</label>
+            <input type="radio" name="geneman" value="male" class="input_right">
+            <label for="">男</label>
+            <input type="radio" name="geneman" value="female">
+            <label for="">女</label>
+          </div>
+          <div>
+            <label for="city" class="lable_left">城市</label>
+            <select name="city" id="city" class="input_right">
+              <option value="bj">北京</option>
+            </select>
+          </div>
+          <div>
+            <label for="favo" class="lable_left">爱好</label>
+            <input type="checkbox" name="favo" value="sprot" class="input_right">
+            <label for="">运动</label>
+            <input type="checkbox" name="favo" value="art">
+            <label for="">艺术</label>
+            <input type="checkbox" name="favo" value="sience">
+            <label for="">科学</label>
+          </div>
+          <div>
+            <label for="textapeare" class="lable_left">个人描述</label>
+            <textarea name="desc" id="desc" cols="30" rows="10" class="input_right"></textarea>
+
+          </div>
+          <div>
+            <input type="submit" value="确认提交" class="submit">
+          </div>
         </form>
+
+
       </div>
 
     </section>
