--- a/css/train/lesson6/lesson.html
+++ b/css/train/lesson6/lesson.html
@@ -14,14 +14,64 @@
   <div class="global">
     <!-- 头部 -->
     <header class="header">
-        <div class="logo">
-          <span>ife.baidu.com</span>
-        </div>
-        <span id="date">2018.07</span>
+      <div class="logo">
+        <span>ife.baidu.com</span>
+      </div>
+      <span>2018.07</span>
     </header>
     <!-- 主体 -->
     <section>
-      
+      <article class="article_top">
+        <div class="top_content">
+          <div class="banner">
+            <img src="./left_top_green_pic.png" alt="" class="left_green">
+            <img src="./left_top_pink_pic.png" alt="" class="right_pink">
+          </div>
+        </div>
+        <div class="tc_sub">
+          <h5></h5>
+          <p class="p1">ABOUT
+            <br> TECHNOLOGE</p>
+          <p>About technologe about technologe
+            <br> about technologe</p>
+          <p class="p_bold" id="p_bold">700</h1>
+            <div class="box_number">
+              <span class="number">3.2</span>
+              <div>
+                <span>CSS</span>
+                <br>
+                <span>csscsscsss</span>
+              </div>
+            </div>
+        </div>
+      </article>
+      <article class="middle">
+        <div class="middle_box">
+          <p class="middle_green">What</p>
+<p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端
+  前端前端前端前端
+          </p>
+        </div>
+        <div class="middle_box">
+          <p class="middle_yellow">When</p>
+<p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端前端前端前端前端 前端前端前端前端前端前端前端前端前端
+  前端前端前端前端
+          </p>
+        </div>
+        <div class="middle_box">
+          <p class="middle_pink">How</p>
+          <p>前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端 前端前端前端前端前端</p>
+          <span>what---------</span>
+          <span class="span_special">40%</span>
+          <br>
+          <span>what---------</span>
+          <span class="span_special">40%</span>
+          <br>
+          <span>what---------</span>
+          <span class="span_special">40%</span>
+          <br>
+        </div>
+      </article>
     </section>
     <!-- 尾部 -->
     <footer></footer>
